# tableau-mcp

./: .gitignore  .utils.py.swp  README.md  config.py  data.hyper  data.xlsx  main.py  mcp_server.py  pyproject.toml  tableau_api.py  test.py  utils.py
.github/: copilot-instructions.md
src/api/: __init__.py  ollama_client.py  routes.py
src/config/: __init__.py  logging.py  settings.py
src/mcp/: __init__.py  handlers.py  tools.py
src/models/: __init__.py  api.py  mcp.py  tableau.py
src/tableau/: __init__.py  client.py  converters.py  datasources.py
static/: index.html
